# dc-research-group-mercor-apex-agents

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  results.md
docs/: ARCHITECTURE.md  AUDIT.md  BENCHMARK_STRUCTURE.md  COST.md  DC_RS_PRD.md  DL_PRD.md  DOCKER.md  DYNAMIC_LEDGER_PRD.md  EVALUATION_PLAN.md  HARNESS_NOTES.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT.md  REPRODUCIBILITY.md  TRACE_PRD.md
example-cheatsheets/: README.md  cheatsheet-example-investment-banking.html  cheatsheet-example-legal.html  cheatsheet-example-management-consulting.html
runs/grok43high-baseline/: results.csv  results.failures.jsonl  results.run_manifest.json
runs/grok43high-baseline/task_00b30f56f39a4a9891d9503443bafb27/: trajectory.json
runs/grok43high-baseline/task_0233800d9daf4459bc464ce2f1f822a8/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_052cc6311cf34bc6bacc4f521ba77460/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_0a4ad19b76cf4602914e6b8a4f263690/: grades.json  initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_0cc6381ab1db4902bdac1c95b3ffcc45/: grades.json  initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_0de09be0daf242208f7a60ee83bf8717/: initial_messages.json  trajectory.json
runs/grok43high-baseline/task_0ffa0e6ff7d3433e98582e50e79068cd/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_1d28a1ef3e8c44eeac211afdad56ccca/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_1d7f4e0be1274b069ad86be4ed813c46/: grades.json  initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_1da4eacde8434166b08bd64d9011095c/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_1e19e170dbac46ae98a24930a70b4b73/: initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_34254f339d6e4f65b59bb2bd97e606e2/: grades.json  initial_messages.json  verifiers.json
runs/grok43high-baseline/task_3742720383624ce58ef4d751f8836392/: grades.json  initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_39c68b482c08464c8fb06cd5af932cd6/: initial_messages.json  trajectory.json
runs/grok43high-baseline/task_3caff6fe3a9f4a9f95e57f371a16b601/: grades.json  initial_messages.json  trajectory.json
runs/grok43high-baseline/task_4372ee27c60f4589884be8cc9d6d8bd8/: grades.json  initial_messages.json  trajectory.json  verifiers.json
runs/grok43high-baseline/task_4bdc188e9a7f4860b818c3cb3013e676/: grades.json  initial_messages.json  verifiers.json  (+1 more)
runs/grok43high-dc-rs/: results.csv  results.failures.jsonl  results.run_manifest.json
runs/grok43high-dl/: results.csv  results.failures.jsonl  results.run_manifest.json
runs/grok43high-trace/: results.csv  results.failures.jsonl  results.run_manifest.json
runs/ib-world219-grok43high/: results.csv  results.run_manifest.json
runs/ib-world219-grok43high-dl/: results.csv  results.run_manifest.json
scripts/: docker_check.sh  fetch_dataset.sh  setup.sh  smoke_test.sh
src/apex_agents_bench/: __init__.py  __main__.py  agent_profile.py  azure_routing.py  catalog.py  cli.py  config.py  dataset.py  docker_env.py  judge.py  paths.py  runner.py  smoke.py  task_index.py  trajectory.py  world.py
tests/: test_agent_profiles.py  test_azure_routing.py  test_catalog.py  test_dataset.py  test_dc_rs_bank.py  test_dc_rs_curation.py  test_dc_rs_extract.py  test_dc_rs_fidelity.py  test_dc_rs_formatting.py  test_dc_rs_injector.py  test_dc_rs_retriever.py  test_dc_rs_runtime.py  test_dc_rs_store.py  test_dc_rs_synthesizer.py  test_dc_rs_trajectory_render.py  test_dl_curator.py  test_dl_entry.py  test_dl_fidelity.py  test_dl_formatting.py  test_dl_injector.py  test_dl_lifecycle.py  test_dl_retriever.py  test_dl_runner.py  test_dl_runtime.py  test_dl_store.py  test_dl_trajectory_render.py  test_docker_env.py  test_dynamic_ledger_curator.py  test_dynamic_ledger_entry.py  test_dynamic_ledger_fidelity.py  test_dynamic_ledger_injector.py  test_dynamic_ledger_retriever_dedup.py  test_dynamic_ledger_store.py  test_dynamic_ledger_trajectory_render.py  test_fidelity.py  test_imports.py  test_judge.py  test_runner.py  test_smoke_selection.py  test_task_index.py  (+6 more)
(+582 files in other folders)
